--- a/src/gui/Material.fxml
+++ b/src/gui/Material.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import org.controlsfx.control.CheckComboBox?>
 <?import org.controlsfx.control.textfield.CustomTextField?>
-<fx:root minHeight="463.0" minWidth="615.0" type="VBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root minHeight="463.0" minWidth="615.0" type="VBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" stylesheets="@style/form.css">
     <children>
         <HBox alignment="CENTER_LEFT">
             <children>
@@ -96,22 +96,22 @@
         </HBox>
         <AnchorPane prefHeight="200.0" prefWidth="200.0" VBox.vgrow="ALWAYS">
             <children>
-                <TableView fx:id="tvIdentifiers" editable="true" layoutX="25.0" prefHeight="200.0" prefWidth="200.0" style="-fx-focus-color: transparent" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="45.0">
+                <TableView fx:id="tvIdentifiers" editable="true" layoutX="25.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="45.0">
                     <columns>
-                        <TableColumn fx:id="tcId" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" style="-fx-alignment: center" text="#" />
-                        <TableColumn fx:id="tcLocation" editable="true" prefWidth="75.0" style="-fx-alignment: center" text="Plaats" />
-                        <TableColumn fx:id="tcAvailable" prefWidth="116.0" style="-fx-alignment: center" text="Beschikbaarheid" />
-                        <TableColumn fx:id="tcActions" prefWidth="75.0" style="-fx-alignment: center" text="Acties" />
+                        <TableColumn fx:id="tcId" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" text="#" />
+                        <TableColumn fx:id="tcLocation" editable="true" prefWidth="75.0" text="Plaats" />
+                        <TableColumn fx:id="tcAvailable" prefWidth="116.0" text="Beschikbaarheid" />
+                        <TableColumn fx:id="tcActions" prefWidth="75.0" text="Acties" />
                     </columns>
                     <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
                     </columnResizePolicy>
                 </TableView>
-                <TableView fx:id="tvSimplifiedIdentifiers" editable="true" layoutX="25.0" prefHeight="200.0" prefWidth="200.0" style="-fx-focus-color: transparent" visible="false" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="45.0">
+                <TableView fx:id="tvSimplifiedIdentifiers" editable="true" layoutX="25.0" prefHeight="200.0" prefWidth="200.0" visible="false" AnchorPane.bottomAnchor="10.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="45.0">
                     <columns>
-                        <TableColumn fx:id="tcSimplifiedLocation" editable="true" prefWidth="75.0" style="-fx-alignment: center" text="Plaats" />
-                        <TableColumn fx:id="tcForLoan" editable="true" prefWidth="75.0" style="-fx-alignment: center" text="Aantal" />
-                        <TableColumn fx:id="tcNotForLoan" editable="true" prefWidth="75.0" style="-fx-alignment: center" text="Niet voor studenten" />
+                        <TableColumn fx:id="tcSimplifiedLocation" editable="true" prefWidth="75.0" text="Plaats" />
+                        <TableColumn fx:id="tcForLoan" editable="true" prefWidth="75.0" text="Aantal" />
+                        <TableColumn fx:id="tcNotForLoan" editable="true" prefWidth="75.0" text="Niet voor studenten" />
                     </columns>
                     <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
