--- a/src/gui/Overview.fxml
+++ b/src/gui/Overview.fxml
@@ -5,19 +5,19 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
-<fx:root spacing="10.0" type="VBox" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root spacing="10.0" type="VBox" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" stylesheets="@style/form.css">
    <children>
       <HBox fx:id="hbOptions" alignment="CENTER_RIGHT" prefHeight="32.0" prefWidth="200.0">
          <children>
             <TextField fx:id="txfFilterMaterials" onKeyPressed="#filterMaterials" HBox.hgrow="ALWAYS" />
          </children>
       </HBox>
-      <TableView fx:id="tvMaterials" prefHeight="200.0" prefWidth="500.0" style="-fx-focus-color: transparent" VBox.vgrow="ALWAYS">
+      <TableView fx:id="tvMaterials" prefHeight="200.0" prefWidth="500.0" VBox.vgrow="ALWAYS">
         <columns>
-          <TableColumn fx:id="tcName" prefWidth="75.0" style="-fx-alignment: center" text="Naam" />
-          <TableColumn fx:id="tcDescription" prefWidth="75.0" style="-fx-alignment: center" text="Beschrijving" />
-            <TableColumn fx:id="tcAmount" prefWidth="75.0" style="-fx-alignment: center" text="Aantal" />
-            <TableColumn fx:id="tcActions" prefWidth="75.0" style="-fx-alignment: center" text="Acties" />
+          <TableColumn fx:id="tcName" prefWidth="75.0" text="Naam" />
+          <TableColumn fx:id="tcDescription" prefWidth="75.0" text="Beschrijving" />
+            <TableColumn fx:id="tcAmount" prefWidth="75.0" text="Aantal" />
+            <TableColumn fx:id="tcActions" prefWidth="75.0" text="Acties" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
