--- a/src/gui/ReservationOverview.fxml
+++ b/src/gui/ReservationOverview.fxml
@@ -1,39 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<fx:root id="AnchorPane" prefHeight="400.0" prefWidth="600.0" type="AnchorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" >
-   <children>
-      <ListView fx:id="lvReservaties" layoutX="14.0" layoutY="186.0" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="200.0" AnchorPane.bottomAnchor="14.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="49.0" />
-      <HBox alignment="CENTER" layoutX="138.0" layoutY="14.0" maxHeight="-Infinity" minHeight="-Infinity" prefHeight="25.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0">
-         <children>
-            <Label maxWidth="1.7976931348623157E308" minWidth="-Infinity" text="Reservaties van" HBox.hgrow="NEVER">
-               <HBox.margin>
-                  <Insets right="5.0" />
-               </HBox.margin>
-            </Label>
-            <DatePicker fx:id="dpStartDate" HBox.hgrow="ALWAYS">
-               <HBox.margin>
-                  <Insets right="5.0" />
-               </HBox.margin>
-            </DatePicker>
-            <Label maxWidth="1.7976931348623157E308" minWidth="-Infinity" text="tot" HBox.hgrow="NEVER">
-               <HBox.margin>
-                  <Insets right="5.0" />
-               </HBox.margin>
-            </Label>
-            <DatePicker fx:id="dpEndDate" HBox.hgrow="ALWAYS">
-               <HBox.margin>
-                  <Insets right="5.0" />
-               </HBox.margin>
-            </DatePicker>
-            <TextField fx:id="tfFilter" minWidth="200.0" promptText="Filter op naam" HBox.hgrow="ALWAYS">
-               <HBox.margin>
-                  <Insets left="5.0" />
-               </HBox.margin>
-            </TextField>
-         </children>
-      </HBox>
-   </children>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
+
+<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="252.0"
+         prefWidth="559.0" spacing="10.0" type="VBox" xmlns="http://javafx.com/javafx/8.0.65"
+         xmlns:fx="http://javafx.com/fxml/1" stylesheets="@style/form.css">
+    <padding>
+        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
+    </padding>
+    <children>
+        <HBox alignment="CENTER_RIGHT" prefWidth="200.0">
+            <children>
+                <CheckBox fx:id="cbShowCompletedReservations" mnemonicParsing="false"
+                          text="Toon afgehandelde reservaties"/>
+            </children>
+        </HBox>
+        <TableView fx:id="tvReservations" minHeight="200.0" prefWidth="200.0">
+            <columns>
+                <TableColumn fx:id="tcBy" minWidth="80.0" prefWidth="-1.0" text="Door"/>
+                <TableColumn fx:id="tcUntil" minWidth="80.0" prefWidth="-1.0" text="Tot"/>
+                <TableColumn fx:id="tcCompleted" minWidth="80.0" prefWidth="-1.0" text="Afgehandeld"/>
+                <TableColumn fx:id="tcActions" minWidth="80.0" prefWidth="-1.0" text="Acties"/>
+            </columns>
+            <columnResizePolicy>
+                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY"/>
+            </columnResizePolicy>
+        </TableView>
+    </children>
 </fx:root>
