--- a/src/gui/controls/calendar/Calendar.fxml
+++ b/src/gui/controls/calendar/Calendar.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.shape.SVGPath?>
-<fx:root prefHeight="311.0" prefWidth="420.0" type="VBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<fx:root minHeight="200" minWidth="300" prefHeight="311.0" prefWidth="420.0" type="VBox" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane maxHeight="-Infinity" minHeight="-Infinity" prefHeight="42.0">
          <children>
