--- a/src/gui/UserDetailsScene.fxml
+++ b/src/gui/UserDetailsScene.fxml
@@ -4,12 +4,8 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.shape.SVGPath?>
-
 <fx:root type="HBox" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <ImageView fx:id="ivUserPhoto" fitHeight="231.0" fitWidth="214.0" pickOnBounds="true" preserveRatio="true">
