--- a/src/gui/ReservationOverview.fxml
+++ b/src/gui/ReservationOverview.fxml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
+
 <fx:root maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
          prefHeight="252.0" prefWidth="559.0" spacing="10.0" stylesheets="@style/form.css" type="VBox"
          xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
@@ -11,12 +15,16 @@
         <Insets bottom="10.0" left="10.0" right="10.0" top="10.0"/>
     </padding>
     <children>
-        <HBox alignment="CENTER_RIGHT" prefWidth="200.0">
+        <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308">
             <children>
                 <CheckBox fx:id="cbShowCompletedReservations" mnemonicParsing="false"
-                          text="Toon afgehandelde reservaties" onAction="#showCompletedReservationsToggle"/>
+                          onAction="#showCompletedReservationsToggle" text="Toon afgehandelde reservaties"
+                          AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0"/>
+                <Button fx:id="btnAddReservation" layoutY="5.0" mnemonicParsing="false"
+                        onAction="#btnAddReservationClicked" text="Voeg reservatie toe" AnchorPane.bottomAnchor="0.0"
+                        AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0"/>
             </children>
-        </HBox>
+        </AnchorPane>
         <TableView fx:id="tvReservations" maxHeight="200.0" prefWidth="200.0">
             <columns>
                 <TableColumn fx:id="tcBy" minWidth="80.0" prefWidth="-1.0" text="Door"/>
