--- a/src/gui/Reservation.fxml
+++ b/src/gui/Reservation.fxml
@@ -1,60 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<fx:root prefHeight="490.0" prefWidth="585.0" spacing="10.0" type="VBox" xmlns="http://javafx.com/javafx/8.0.65"
-         xmlns:fx="http://javafx.com/fxml/1" stylesheets="@style/form.css">
+<?import javafx.scene.Cursor?>
+<fx:root prefHeight="490.0" prefWidth="585.0" spacing="10.0" stylesheets="@style/form.css" type="VBox"
+         xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+        <AnchorPane>
+            <children>
+                <HBox alignment="CENTER_LEFT" spacing="10.0" AnchorPane.topAnchor="0.0" AnchorPane.bottomAnchor="0.0"
+                      AnchorPane.leftAnchor="0.0">
+                    <children>
+                        <Label text="Door:">
+                            <HBox.margin>
+                                <Insets right="-7.0"/>
+                            </HBox.margin>
+                        </Label>
+                        <Label fx:id="lblUser" text="Gebruiker" textFill="#0096c9">
+                            <cursor>
+                                <Cursor fx:constant="HAND" />
+                            </cursor>
+                        </Label>
+                    </children>
+                </HBox>
+                <HBox fx:id="hbOptions" alignment="CENTER_RIGHT" spacing="10.0" AnchorPane.topAnchor="0.0"
+                      AnchorPane.rightAnchor="0.0" AnchorPane.bottomAnchor="0.0"/>
+            </children>
+        </AnchorPane>
+        <HBox alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="5.0"
               VBox.vgrow="NEVER">
             <children>
                 <Label maxWidth="-Infinity" minWidth="-Infinity" text="Afhalen"/>
-                <DatePicker fx:id="dpStartDate" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
-                    <HBox.margin>
-                        <Insets left="5.0" right="5.0"/>
-                    </HBox.margin>
-                </DatePicker>
+                <DatePicker fx:id="dpStartDate" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS"/>
                 <Label maxWidth="-Infinity" minWidth="-Infinity" text="Om"/>
                 <TextField fx:id="tfStartTime" alignment="CENTER" maxWidth="-Infinity" minWidth="-Infinity"
-                           prefWidth="50.0" HBox.hgrow="ALWAYS">
-                    <HBox.margin>
-                        <Insets left="5.0" right="5.0"/>
-                    </HBox.margin>
-                </TextField>
+                           prefWidth="50.0" HBox.hgrow="ALWAYS"/>
                 <Label maxWidth="-Infinity" minWidth="-Infinity" text="Terugbrengen">
                     <HBox.margin>
                         <Insets left="5.0"/>
                     </HBox.margin>
                 </Label>
-                <DatePicker fx:id="dpEndDate" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS">
-                    <HBox.margin>
-                        <Insets left="5.0" right="5.0"/>
-                    </HBox.margin>
-                </DatePicker>
+                <DatePicker fx:id="dpEndDate" maxWidth="1.7976931348623157E308" HBox.hgrow="ALWAYS"/>
                 <Label maxWidth="-Infinity" minWidth="-Infinity" text="Om"/>
                 <TextField fx:id="tfEndTime" alignment="CENTER" maxWidth="-Infinity" minWidth="-Infinity"
-                           prefWidth="50.0" HBox.hgrow="ALWAYS">
-                    <HBox.margin>
-                        <Insets left="5.0"/>
-                    </HBox.margin>
-                </TextField>
+                           prefWidth="50.0" HBox.hgrow="ALWAYS"/>
             </children>
-            <VBox.margin>
-                <Insets/>
-            </VBox.margin>
         </HBox>
-        <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" VBox.vgrow="NEVER" spacing="5.0">
+        <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="1.7976931348623157E308" VBox.vgrow="NEVER"
+              spacing="5.0">
             <children>
                 <Label layoutX="67.0" layoutY="57.0" text="Gereserveerde materialen" AnchorPane.bottomAnchor="218.0"
                        AnchorPane.leftAnchor="14.0"/>
                 <Separator layoutX="155.0" layoutY="172.0" maxWidth="1.7976931348623157E308"
                            AnchorPane.bottomAnchor="222.0" AnchorPane.leftAnchor="155.0" AnchorPane.rightAnchor="14.0"
                            HBox.hgrow="ALWAYS">
-                    <opaqueInsets>
-                        <Insets/>
-                    </opaqueInsets>
                     <HBox.margin>
                         <Insets top="3.0"/>
                     </HBox.margin>
